--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "body-parser": "^1.15.2",
-    "dotenv": "^8.2.0",
-    "express": "^4.12.4",
-    "mongoose": "^5.11.15"
+    "body-parser": "^1.20.2",
+    "dotenv": "^8.6.0",
+    "express": "^4.18.2",
+    "mongoose": "^5.11.15",
+    "nodemon": "^3.0.2"
   },
   "repository": {
     "type": "git",
